# raceintospace

./: .cvsignore  .gitignore  .indent.pro  .travis.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT  CODE_OF_CONDUCT.txt  ChangeLog  ChangeLog.md  DEVELOPER  Doxyfile.extended  Doxyfile.quick  PLAN  QUESTIONS  README  README.avdata  README.md  Release.md  TESTING.md  TODO  WHO_SPOT  aclocal.m4  admin.cpp  budget.cpp  make_archive.cmake  museum.cpp  raceintospace.6  vab.cpp  vcpkg-configuration.json  vcpkg.json
.git-hooks/: pre-commit
.github/workflows/: CI.yaml  build-windows-vcpkg.yaml  macos.yml
cmake/: CpackWritePackageNames.cmake.in  FindOgg.cmake  FindVorbis.cmake  Findjsoncpp.cmake  Findunofficial-theora.cmake  NsisCpack.cmake.in
contrib/fedora/: mkarchive  mksnap  raceintospace.spec
contrib/flatpak/: com.raceintospace.Raceintospace.yml  org.raceintospace.Raceintospace.yml  physfs-test-strncpy.patch
data/gamedata/: aprog.but  arrows.but  babyclif.cdr  babynorm.cdr  beggam.but  budd.but  cem.img  cia.but  control.img  crew.json  downgrades.json  endgame.but  endgame.json  event.json  faces.but  fails.cdr  fails.json  flagger.but  fseq.json  fseq.key  help.cdr  help.json  help.txt  hist.json  legacy-fseq.json  legacy-seq.json  lenin.but  letter.json  liftoff.json  lmer.but  loser.but  mhist.but  mis_c.cpp  missSteps.json  mission.json  modus.cfg  moon.but  music.cat  news.img  news.json  (+18 more)
data/midi/: drumsm.mid  filler.mid  future.mid  intel.mid  missplan.mid  (+12 more)
debian/: changelog  control  copyright  raceintospace.desktop  raceintospace.menu  rules  watch
doc/: RosterChanges.txt  org.raceintospace.Raceintospace.metainfo.xml  raceintospace.appdata.xml
gamedata/: babypicx.cdr  default.pal  fails.cdr  first.img  flag.seq  fmin.img  inte_1.but  intel.but  lfacil.but  liftoff.abz  lpads.but  nfutbut.but  presr.but  prfx.but  satbld.but  spots.cdr  table.crc  tracker.but  vab.img
icons/: raceintospace.desktop  raceintospace.xcf  raceintospace.xpm
lib/: CMakeLists.txt  Global.cmake  jsoncpp-CMakeLists.txt
lib/boost/: CMakeLists.txt
lib/cereal/: CMakeLists.txt
lib/jsoncpp/: CMakeLists.txt
lib/libogg/: CMakeLists.txt  config_types.h.in
lib/libpng/: CMakeLists.txt
lib/libtheora/: CMakeLists.txt
lib/libvorbis/: CMakeLists.txt
lib/protobuf/: CMakeLists.txt  config.h.in
lib/sdl/: CMakeLists.windows.txt
lib/zlib/: CMakeLists.txt
m4/: ac_func_mkdir.m4  theora.m4
midi/: ASSEMBLY.MID  ASTTRNG.MID  BADNEWS.MID  ELEPHANT.MID  GOOD.MID  HARDWARE.MID  HISTORY.MID  INTELLEG.MID  INTERLUD.MID  LIFTOFF.MID  NEW1950.MID  PRES.MID  R&D.MID  SCCSETUP.MID  SUCCESS.MID  SVPORT1.MID  USFUN.MID  USPORT1.MID
rpm/: README.txt  make-git-snapshot.sh  raceintospace.mageia.spec
src/: CMakeLists.txt  raceintospace_config.h.in
src/display/: CMakeLists.txt  Global.cmake  color.h  deprecated.h  graphics.cpp  graphics.h  image.cpp  image.h  legacy_surface.cpp  legacy_surface.h  palette.cpp  palette.h  palettized_surface.cpp  palettized_surface.h  png_image.cpp  png_image.h  surface.cpp  surface.h
src/game/: Buzz_inc.h  CMakeLists.macosx.txt  CMakeLists.txt  Global.cmake  Makefile.in  admin.c  admin.cpp  admin.h  aimast.c  aimast.cpp  aimast.h  aimis.c  aimis.cpp  aimis.h  aipur.c  aipur.cpp  aipur.h  ast0.c  ast0.cpp  ast0.h  ast1.c  ast1.cpp  ast1.h  ast2.c  ast2.cpp  ast2.h  ast3.c  ast3.cpp  ast3.h  ast4.c  ast4.cpp  ast4.h  ast_mod.cpp  ast_mod.h  astros.cpp  astros.h  av.h  budget.c  budget.cpp  budget.h  (+195 more)
src/game/platform_macosx/: .org  Info.plist.in  SDLMain.h  SDLMain.m  music_osx.cpp  platform.cmake  utils.m
src/game/platform_macosx/SDLMain.nib/: keyedobjects.nib
src/game/platform_misc/: main.c  platform.cmake
src/game/platform_windows/: dirent.h  fake_unistd.h  main.c  platform.cmake
src/os_linux/: README  build-setup  raceintospace.spec.in  raceintospace.xpm
src/os_macosx/: CMakeLists.txt  CopyNIB.cmake  Info.plist  RaceIntoSpace.icns  SDLMain.m  int_types.h  moon.icns  music_osx.c  music_osx.cpp
src/os_macosx/English.lproj/: InfoPlist.strings
src/os_macosx/English.lproj/CVS/: Entries  Repository  Root
src/os_macosx/English.lproj/SDLMain.nib/: classes.nib  info.nib  keyedobjects.nib
src/os_macosx/English.lproj/SDLMain.nib/CVS/: Entries  Repository
src/os_macosx/MacPorts/games/raceintospace/: Portfile
src/os_macosx/RaceIntoSpace.xcodeproj/: project.pbxproj
src/os_macosx/SDLMain.nib/: designable.nib
src/os_macosx/old/: race.h
src/os_macosx/old/CVS/: Entries  Repository
src/os_macosx/old/MacPorts/CVS/: Entries  Repository
src/os_macosx/old/MacPorts/games/CVS/: Entries  Repository
src/os_macosx/old/MacPorts/games/raceintospace/CVS/: Entries  Repository
src/os_macosx/old/RaceIntoSpace.xcodeproj/: .cvsignore
src/os_macosx/old/RaceIntoSpace.xcodeproj/CVS/: Entries  Repository
src/os_macosx/old/RaceIntoSpace.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/os_macosx/old/RaceIntoSpace.xcodeproj/project.xcworkspace/xcuserdata/delta407.xcuserdatad/: UserInterfaceState.xcuserstate
src/os_macosx/old/RaceIntoSpace.xcodeproj/xcuserdata/delta407.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
src/os_macosx/old/RaceIntoSpace.xcodeproj/xcuserdata/delta407.xcuserdatad/xcschemes/: Race Into Space.xcscheme  RaceIntoSpace.dmg.xcscheme  xcschememanagement.plist
src/os_win32/: Makefile.os  configure.mingw  installer.nsi.in
src/os_win32/CVS/: Entries  Repository
src/protobuf/: CMakeLists.txt  raceintospace.proto
src/utils/: CMakeLists.txt  Makefile  but2png.c  but2png.cpp  data_decoder.c  data_decoder.cpp  frm2mpeg.sh  frm2theora.sh  getport.c  getvab.c  mkmovie  mkmovie.c  mkmovie.cpp  mknews.c  mknews.cpp  mkrpm.in  news2png.cpp  news2raw.pl  raw2ogg.sh  raw2wav.pl  sdltest.c  sync_docs.sh  vtest.c  vtest2.c
src/utils/CVS/: Entries  Repository
src/utils/decrypt_sav/: DECRYPT.DSK  DECRYPT.PRJ  MAIN.C  README
src/utils/decrypt_sav/CVS/: Entries  Repository
src/utils/mkmovie.dSYM/Contents/: Info.plist
src/utils/mkmovie.dSYM/Contents/Resources/DWARF/: mkmovie
test/: music_none.cpp  test_main.cpp
(+9 files in other folders)
